syntax = "proto3";

package Greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  enum Language{
	en_us = 0; //枚举必须以0开始
	zh_cn = 1;
  }
  Language languageEnum = 2;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
  int32 num = 2;
  int32 adsa =3;
}
